// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: inline-block;
  font-weight: 700;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.006rem;
  -moz-letter-spacing: 0.006rem;
  -ms-letter-spacing: 0.006rem;
  letter-spacing: 0.006rem;
  padding: 4px;
  background-color: #f4f6f8;
  color: #001833;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 9999px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`Badge renders small 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: inline-block;
  font-weight: 700;
  font-size: 10px;
  line-height: 1.4;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  padding: 3px 3px;
  background-color: #f4f6f8;
  color: #001833;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 9999px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    />
  </div>
</DocumentFragment>
`;
